# ip-sentinel

./: .flake8  .gitignore  CHECKMK_LIVE_TEST_RESULTS.md  CHECKPOINT_28_VERIFICATION.md  LICENSE  MANUAL_TEST_RESULTS.md  NETBOX_ENHANCEMENT_COMPLETE.md  NETBOX_ENHANCEMENT_FINAL.md  NETBOX_ENHANCEMENT_SUMMARY.md  NETBOX_LIVE_TEST_RESULTS.md  NOTICE  OPENVAS_LIVE_TEST_RESULTS.md  README.md  RELEASE_NOTES_0.5.2.md  RELEASE_NOTES_0.5.3.md  TASK_16.2_POSTPONED.md  TEST_FIXES_SUMMARY.md  pyproject.toml  requirements.txt  setup.py  test_checkmk_all_configs.py  test_checkmk_api.py  test_checkmk_connection.py  test_checkmk_endpoints.py  test_checkmk_host_config.py  test_checkmk_host_detail.py  test_checkmk_live.py  test_checkmk_search_ip.py  test_checkmk_service_detail.py  test_html_ssl_fix.py  test_netbox_live.py  test_openvas_connection.py  test_openvas_live.py  test_results.txt
.kiro/steering/: product.md  structure.md  tech.md
config/: app_credentials.example.json
docs/: CONFIGURATION.md  LICENSE_ANALYSIS.md  LICENSE_RECOMMENDATION.md  README.md  USAGE_EXAMPLES.md
examples/: README.md  batch_scan_html_report.sh  batch_scan_multiple_networks.sh  batch_scan_parallel.sh  batch_scan_simple.sh  batch_scan_with_modules.sh
src/ip_mana/: __init__.py  analyzer.py  cli.py  config.py  ip_handler.py
src/ip_sentinel/: __init__.py  analyzer.py  batch.py  cli.py  config.py  ip_handler.py
tests/: __init__.py
tests/integration/: test_application_module_integration.py  test_batch_mode_integration.py  test_batch_progress_tracking.py  test_end_to_end_analysis.py  test_parallel_batch_mode.py  test_ux_enhancements.py
tests/property/: test_application_integration_error_handling.py  test_batch_mode_output_format.py  test_batch_size_limit.py  test_cidr_expansion.py  test_classification_accuracy.py  test_classification_consistency.py  test_classification_crud.py  test_conditional_ssl_testing.py  test_configuration_file_processing.py  test_database_location_config.py  test_database_persistence.py  test_dense_mode_filtering.py  test_filename_sanitization.py  test_full_mode_completeness.py  test_internet_information_gathering.py  test_internet_module_qualification.py  test_ip_validation.py  test_ip_version_consistency.py  test_local_network_analysis.py  test_mac_address_processing.py  test_module4_access_control.py  test_module_availability_validation.py  test_output_folder_management.py  test_output_format_validity.py  test_parallel_processing_thread_safety.py  test_progress_completion_counter.py  (+7 more)
(+38 files in other folders)
